--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.2",
+    "@prisma/client": "^6.4.1",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-icons": "^1.3.2",
@@ -24,6 +25,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.476.0",
     "next": "15.2.0",
+    "prisma": "^6.4.1",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
