--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.476.0",
     "next": "15.2.0",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "prisma": "^6.4.1",
     "react": "^19.0.0",
@@ -47,6 +48,7 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "toaster": "^0.1.2",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
