--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,17 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   app:
     build:
       context: .
       target: deps
-    command: npm run dev
+    command: sh -c "npx prisma generate && npm run dev"
     ports:
       - "3000:3000"
     environment:
@@ -28,7 +33,8 @@ services:
       - /app/node_modules
       - /app/.next
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
 volumes:
   postgres_data: 
