--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^3.0.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.7",
     "jsonwebtoken": "^9.0.2",
@@ -55,6 +56,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "toaster": "^0.1.2",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
